--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
     "@babel/plugin-proposal-class-properties": "^7.7.0",
     "@babel/preset-env": "^7.7.1",
     "@babel/preset-react": "^7.7.0",
-    "babel-eslint": "10.0.2",
     "@storybook/addon-actions": "^5.2.6",
     "@storybook/addon-links": "^5.2.6",
     "@storybook/addons": "^5.2.6",
     "@storybook/react": "^5.2.6",
-    "babel-loader": "^8.0.6"
+    "babel-eslint": "10.0.2",
+    "babel-loader": "^8.0.6",
+    "firebase-tools": "^7.8.1"
   }
 }
