--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
   },
   "dependencies": {
     "gatsby": "^2.17.11",
+    "gatsby-plugin-sharp": "^2.3.4",
+    "gatsby-source-drupal": "^3.3.8",
     "gatsby-theme-octahedroid": "^1.0.0",
+    "gatsby-transformer-sharp": "^2.3.6",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "sharp": "^0.23.3",
     "tailwindcss": "^1.1.4"
   },
   "devDependencies": {
