feat: create env.production file

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,6 +36,14 @@ jobs:
           key: v1-dependencies-{{ checksum "package.json" }}
 
       - run:
+          name: Import Tokens
+          command: |
+            touch .env.production
+            echo "CLIENT_ID=$CLIENT_ID" >> .env.production
+            echo "CLIENT_SECRET=$CLIENT_SECRET" >> .env.production
+            echo "DRUPAL_AUTH=$DRUPAL_AUTH" >> .env.production
+
+      - run:
           name: Gatsby Build
           command: npm run build
 
