--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-theme-octahedroid": "^1.0.0",
     "gatsby-transformer-sharp": "^2.3.6",
     "react": "^16.11.0",
+    "react-content-loader": "^4.3.2",
     "react-dom": "^16.11.0",
     "sharp": "^0.23.3",
     "tailwindcss": "^1.1.4"
